--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -8,7 +8,7 @@
 
 .country-selector__header { margin-bottom: 0; }
 
-.country-selector__item { border-bottom: 2px solid #EEF0F2; border-radius: 0; }
+.country-selector__item { border-bottom: 2px solid #EEF0F2; border-radius: 0; -webkit-box-shadow: none; box-shadow: none; }
 
 .country-selector__item-header { padding: 30px 0 10px; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
@@ -32,7 +32,10 @@
 
 .country-selector__item-language a:hover, .country-selector__item-language a:focus { color: #333F48; }
 
-@media screen and (min-width: 992px) { .country-selector__item-list { margin-left: -25px; margin-right: -25px; }
+@media screen and (max-width: 991px) { .country-selector__header { font-size: 3.3rem; line-height: 4.3rem; } }
+
+@media screen and (min-width: 992px) { .country-selector__header { font-size: 5rem; line-height: 6rem; }
+  .country-selector__item-list { margin-left: -25px; margin-right: -25px; }
   .country-selector__item-country { padding: 20px 25px; }
   .country-selector__item-language { display: inline-block; padding: 0 8px; border-right: 1px solid #333; }
   .country-selector__item-language:first-child { padding-left: 0; }
