[Eaton-90] Country Selector: Adding Data for new Regions + Style updates

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
@@ -1,6 +1,6 @@
 <!--/* Country Selector: Accordion */-->
 <sly data-sly-use.data="${'../data/view-data.js' @testdata=properties.testdata}">
-  <div class="country-selector--accordion">
+  <div class="country-selector">
     <div class="container">
         <div class="row">
             <h2 class="country-selector__header">${data.header}</h2>
