--- a/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
@@ -60,7 +60,11 @@
     bottom: 80px;
     color: $color__white;
     width: 20%;
-    left: 20px;
+    left: 15px;
+
+    @include media-desktop-and-up {
+      left: 30px;
+    }
   }
 
   &__image {
@@ -72,12 +76,13 @@
     bottom: 0;
     width: 100%;
     margin: 0;
-    padding: 20px;
+    padding: 10px 15px;
     font-size: 1.875em;
 
 
-    @include media-tablet-and-up {
+    @include media-desktop-and-up {
       font-size: 2em;
+      padding: 20px 30px;
     }
 
     &--background {
