--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-l2-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-l2-hero.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="${'../data/view-l2-hero-data.js' @tesdata=properties.testdata }">
+<sly data-sly-use.data="${'../data/view-l2-hero-data.js' @testdata=properties.testdata}">
   <div class="l2-hero l2-hero--vertical-align">
 
     <!-- Start: Rendition Background Component -->
