adding quote view on TTIL list

--- a/eaton.frontend/src/components/ttil-list/css/ttil-list.scss
+++ b/eaton.frontend/src/components/ttil-list/css/ttil-list.scss
@@ -12,3 +12,4 @@
 @import "views/view-image-only";
 @import "views/view-category-hero";
 @import "views/view-featured-list";
+@import "views/view-quotes";
