[EATON-467] Faceted Navigation - cleanup / refactor WIP

--- a/eaton.frontend/src/shared/module-autocorrected-search/css/module-autocorrected-search.scss
+++ b/eaton.frontend/src/shared/module-autocorrected-search/css/module-autocorrected-search.scss
@@ -13,8 +13,7 @@
 
 .autocorrected-search {
 
-  // Empty selector for future reference
-
+  margin-top: 20px;
 
 
   //-----------------------------------
