--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -4,8 +4,6 @@
 
 .country-selector__item-icon::after { content: "\EA22"; }
 
-.country-selector { padding: 60px 0; }
-
 .country-selector__header { margin-bottom: 0; }
 
 .country-selector__item { border-bottom: 4px solid #EEF0F2; border-radius: 0; -webkit-box-shadow: none; box-shadow: none; }
@@ -28,9 +26,15 @@
 
 .country-selector__item-language a:hover, .country-selector__item-language a:focus { color: #333F48; }
 
-@media screen and (max-width: 991px) { .country-selector__header { font-size: 3.3rem; line-height: 4.3rem; } }
+@media screen and (max-width: 991px) { .country-selector { padding: 30px 0; }
+  .country-selector__header { font-size: 3.3rem; line-height: 4.3rem; }
+  .country-selector__item-header { padding: 30px 0 15px; }
+  .country-selector__item-country { padding: 25px 0; margin: 0 15px; border-bottom: 1px solid #EEF0F2; }
+  .country-selector__item-country:last-child { border-bottom: 0; }
+  .country-selector__item-language-list { padding-top: 20px; } }
 
-@media screen and (min-width: 992px) { .country-selector__header { font-size: 5rem; line-height: 6rem; }
+@media screen and (min-width: 992px) { .country-selector { padding: 60px 0; }
+  .country-selector__header { font-size: 5rem; line-height: 6rem; }
   .country-selector__item-header { padding: 50px 0 15px; }
   .country-selector__item-body { padding-bottom: 30px; }
   .country-selector__item-country { padding: 0 15px 30px; }
