--- a/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
@@ -55,10 +55,6 @@
 
   // Content Styles - Region
   //-----------------------------------
-  &__item-body {
-    // padding-bottom: ($spacing__sm / 3);
-  }
-
   &__item-list {
     display: block;
     padding: 0;
@@ -69,10 +65,6 @@
 
   // Country Styles
   //-----------------------------------
-  &__item-country {
-    // padding: ($spacing__md / 3) 15px;
-  }
-
   &__item-country-flag {
     // margin-right: ($spacing__sm / 3); //TODO: Enable
   }
@@ -122,9 +114,13 @@
     }
 
     &__item-country {
-      padding: 25px 0;
+      padding: $spacing__sm 0 ($spacing__md / 3);
       margin: 0 ($spacing__sm / 2);
       border-bottom: 1px solid $color__secondary-gray5;
+
+      &:first-child {
+        padding-top: ($spacing__sm / 2);
+      }
 
       &:last-child {
         border-bottom: 0;
@@ -132,7 +128,18 @@
     }
 
     &__item-language-list {
-      padding-top: 20px;
+      padding-top: 10px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    &__item-language {
+      flex-basis: 50%;
+
+      a {
+        padding: 10px 10px 10px 0;
+        display: block;
+      }
     }
   }
 
