--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -29,9 +29,12 @@
 @media screen and (max-width: 991px) { .country-selector { padding: 30px 0; }
   .country-selector__header { font-size: 3.3rem; line-height: 4.3rem; }
   .country-selector__item-header { padding: 30px 0 15px; }
-  .country-selector__item-country { padding: 25px 0; margin: 0 15px; border-bottom: 1px solid #EEF0F2; }
+  .country-selector__item-country { padding: 30px 0 20px; margin: 0 15px; border-bottom: 1px solid #EEF0F2; }
+  .country-selector__item-country:first-child { padding-top: 15px; }
   .country-selector__item-country:last-child { border-bottom: 0; }
-  .country-selector__item-language-list { padding-top: 20px; } }
+  .country-selector__item-language-list { padding-top: 10px; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+  .country-selector__item-language { -ms-flex-preferred-size: 50%; flex-basis: 50%; }
+  .country-selector__item-language a { padding: 10px 10px 10px 0; display: block; } }
 
 @media screen and (min-width: 992px) { .country-selector { padding: 60px 0; }
   .country-selector__header { font-size: 5rem; line-height: 6rem; }
