--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-detail-card.html
@@ -3,11 +3,20 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-6 module-product-detail-card--image-container">
+          <img class="img-responsive"
+              alt="${data.image.altText}"
+              src="${data.image.desktop}"
+              data-src="${data.image.desktop}"
+              data-desktop-rendition="${data.image.desktop}"
+              data-tablet-rendition="${data.image.tablet}"
+              data-mobile-rendition="${data.image.mobile}" />
+
           <!-- Start: Rendition Image Component -->
-          <sly data-sly-use.tpl="../../shared/templates/rendition-image.html">
+          <!-- <sly data-sly-use.tpl="../../shared/templates/rendition-image.html">
             <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
-          </sly>
+          </sly> -->
           <!-- End: Rendition Image Component -->
+
         </div>
         <div class="col-xs-12 col-md-6">
           <h1 class="module-product-detail-card__title">
