--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
@@ -3,8 +3,8 @@
   <div class="country-selector--accordion">
     <div class="container">
         <div class="row">
-            <h2 class="country-selector__header">${data.header}</h2>
-            <div data-sly-list="${data.regionList}" class="panel-group country-selector__list" role="tablist" aria-multiselectable="true">
+            <h2 class="col-sm-12 country-selector__header">${data.header}</h2>
+            <div data-sly-list="${data.regionList}" class="col-sm-12 panel-group country-selector__list" role="tablist" aria-multiselectable="true">
                 <div class="panel country-selector__item">
                     <div class="panel-heading country-selector__item-header" role="tab" id="${item.regionId}">
                         <a href="#collapse-${itemList.index}"
