--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
@@ -24,7 +24,7 @@
 
                     <div id="collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="${item.regionId}">
                         <div class="country-selector__item-body">
-                            <ul data-sly-list.country="${item.countryList}" class="row country-selector__item-list">
+                            <ul data-sly-list.country="${item.countryList}" class="country-selector__item-list">
                                 <li class="col-xs-12 col-md-3 country-selector__item-country">
                                     <div class="country-selector__item-country-name">
                                       <i class="country-selector__item-country-flag icon icon-${country.countryId}" aria-hidden="true"></i>
