--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -29,7 +29,7 @@
 @media screen and (max-width: 991px) { .country-selector { padding: 30px 0; }
   .country-selector__header { font-size: 3.3rem; line-height: 4.3rem; }
   .country-selector__item-header { padding: 30px 0 15px; }
-  .country-selector__item-country { padding: 30px 0 20px; margin: 0 15px; border-bottom: 1px solid #EEF0F2; }
+  .country-selector__item-country { padding: 30px 0; border-bottom: 1px solid #EEF0F2; }
   .country-selector__item-country:first-child { padding-top: 15px; }
   .country-selector__item-country:last-child { border-bottom: 0; }
   .country-selector__item-language-list { padding-top: 10px; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
