[Eaton-90] Country Selector: Data-model - Central America & Caribbean

--- a/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
@@ -162,7 +162,7 @@
     }
 
     &__item-country {
-      padding: 0 ($spacing__sm / 2) $spacing__sm;
+      padding: 0 0 $spacing__sm;
     }
 
     &__item-country-name {
