--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-3-column-control/static_grid-3-column-control.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-3-column-control/static_grid-3-column-control.html
@@ -3,7 +3,7 @@
 </sly>
 
 
-<div class="eaton-grid-control eaton-grid-control--3-col eaton-grid-control--theme-${properties.testdata}">
+<div class="eaton-grid-control eaton-grid-control--3-col eaton-grid-control--theme-${properties.testdata} ${ properties.testdata == 'blue'  ? 'dark-theme' : '' }"">
   <div class="container">
     <div class="row">
       <!--/* Include Parsys - Column One */-->
