--- a/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
@@ -66,7 +66,10 @@
   // Country Styles
   //-----------------------------------
   &__item-country-flag {
-    // margin-right: ($spacing__sm / 3); //TODO: Enable
+    margin-right: ($spacing__sm / 3); //TODO: Enable
+    width: 25px;
+    height: 25px;
+    background: $color__pinterest;
   }
 
   &__item-country-name {
@@ -130,6 +133,7 @@
       padding-top: 10px;
       display: flex;
       flex-wrap: wrap;
+      margin-left: ($spacing__sm + 5);
     }
 
     &__item-language {
