Image Sprites - Create Gulp Task to generate image-sprite & styles.

--- a/eaton.frontend/src/global/css/etn-global.scss
+++ b/eaton.frontend/src/global/css/etn-global.scss
@@ -10,6 +10,7 @@
 // NOTE: Bootstrap 3 provides a 'normalize/reset' module.
 @import "base/fonts";
 @import "base/eaton-glyphicon-font";
+@import "base/eaton-flags-sprite";
 @import "base/typography";
 
 
