--- a/eaton.frontend/src/global/css/etn-global.scss
+++ b/eaton.frontend/src/global/css/etn-global.scss
@@ -17,3 +17,6 @@
 // Import Utilites and base Elements
 @import "utils/**/*.scss";
 @import "base/elements/**/*.scss";
+
+// Generate Styles for Flags-Sprite
+@include sprites($spritesheet-sprites);
