--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-quotes.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-quotes.html
@@ -1,7 +1,7 @@
 <div class="eaton-ttil-quotes" data-sly-use.data="${'../data/view-quotes-data.js' @testdata=properties.testdata}">
 
   <sly data-sly-list.quote=${data.items}>
-  <div class="eaton-ttil-quote eaton-ttil-quote__${quote.alignment}">
+  <div class="eaton-ttil-quote ${quoteList.even ? 'eaton-ttil-quote__right' : 'eaton-ttil-quote__left'}">
       <div class="eaton-ttil-quote__image">
         <!-- Start: Rendition Image Component -->
         <sly data-sly-use.tpl="../../../shared/templates/rendition-image.html">
