--- a/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
@@ -46,7 +46,7 @@
   }
 
   @include media-desktop-and-up {
-    width: calc(60% + 484px);
+    width: 100%;
     display: flex;
     align-items: center;
 
@@ -88,7 +88,7 @@
     }
 
     &__left {
-      margin-left: calc(100% - (60% + 484px));
+      margin-left: 0;
       display: flex;
 
       .eaton-ttil-quote {
@@ -111,6 +111,14 @@
       .eaton-ttil-quote__text-container {
         text-align: left;
       }
+    }
+  }
+
+  @include media-desktop-large {
+    width: calc(60% + 484px);
+
+    &__left {
+      margin-left: calc(100% - (60% + 484px));
     }
   }
 }
