[Eaton-314] CTA (Link View) - Initial markup + Data (Based on Mega Menu)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/mega-menu/pages/mega-menu-markets.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/mega-menu/pages/mega-menu-markets.html
@@ -3,13 +3,13 @@
     <!--/*  Include: Mega-Menu-Title */-->
     <div class="mega-menu-title">
       <div class="container">
-        <a href="#" class="mega-menu-title__level1-link">
+        <div class="mega-menu-title__level1-link">
           <i class="mega-menu-title__icon glyphicon glyphicon-menu-left" aria-hidden="true"></i>
           <div>
-            <sly data-sly-resource="${'markets-title' @ resourceType='/apps/eaton/static-components/general/title'}"></sly>
+            <sly data-sly-resource="${'markets-cta-link' @ resourceType='/apps/eaton/static-components/general/cta'}"></sly>
           </div>
           <i class="mega-menu-title__icon glyphicon glyphicon-menu-right" aria-hidden="true"></i>
-        </a>
+        </div>
         <button class="button--reset mega-menu-title__close-menu">
           <span class="sr-only">Close Search</span>
           <i class="mega-menu-title__icon icon icon-close" aria-hidden="true"></i>
