add form styleguide

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .icon::before { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
 
 .icon-badge::before { content: "\EA01"; }
@@ -326,3 +327,39 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 .dark-theme .rich-text-container h2, .dark-theme .rich-text-container h3, .dark-theme .rich-text-container h4, .dark-theme .rich-text-container h5, .dark-theme .rich-text-container h6 { color: #FFF; }
 
 .dark-theme .rich-text-container ul li::before { background-color: #FFF; }
+
+.eaton-form { font-family: Arial, 'Arial', sans-serif; }
+
+.eaton-form .field-p { margin-bottom: 30px; }
+
+.eaton-form .LV_validation_message { font-size: 14px; font-weight: 100; font-style: italic; margin: 0; position: relative; top: 10px; }
+
+.eaton-form .radio-option.field-size-top-large { float: left; }
+
+.eaton-form .radio-option .inner { vertical-align: middle; color: #000; }
+
+.eaton-form .radio-option .list-order.twoColumn { padding-bottom: 20px; float: left; width: 35%; }
+
+.eaton-form input[type="text"] { width: 195px; height: 34px; display: block; margin-top: 10px; }
+
+.eaton-form [type="checkbox"]:not(:checked), .eaton-form [type="checkbox"]:checked { position: absolute; left: -100%; }
+
+.eaton-form [type="checkbox"]:not(:checked) + span, .eaton-form [type="checkbox"]:checked + span { position: relative; padding-left: 45px; }
+
+.eaton-form [type="checkbox"]:not(:checked) + span::before, .eaton-form [type="checkbox"]:checked + span::before { display: block; content: ''; position: absolute; left: 0; top: -8px; width: 2.5em; height: 2.5em; background-color: #eef0f2; }
+
+.eaton-form [type="checkbox"]:checked + span::after { content: '✔'; font-size: 2.6em; line-height: 0.8; color: #005bbb; position: absolute; top: 2px; left: 2px; }
+
+.eaton-form input[type="radio"]:not(:checked), .eaton-form input[type="radio"]:checked { position: absolute; display: inline-block; left: -100%; }
+
+.eaton-form input[type="radio"]:not(:checked) + span, .eaton-form input[type="radio"]:checked + span { position: relative; padding-left: 30px; }
+
+.eaton-form input[type="radio"]:not(:checked) + span::before, .eaton-form input[type="radio"]:checked + span::before { content: ''; position: absolute; left: -12px; top: -12px; width: 2.5em; height: 2.5em; border: 1px solid #ddd; border-radius: 100%; background: #fff; }
+
+.eaton-form input[type="radio"]:checked + span::after { content: ''; width: 18px; height: 18px; background: #005eb8; position: absolute; top: -6px; left: -6px; border-radius: 100%; }
+
+.eaton-form input[type="submit"] { background: none; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; padding: 15px 100px; color: #005EB8; border-color: #005EB8; }
+
+.eaton-form textarea { display: block; margin-top: 10px; width: 500px; height: 225px; }
+
+.eaton-form select { width: 195px; height: 34px; -webkit-appearance: none; -moz-appearance: none; appearance: none; position: relative; border-radius: 0; display: block; margin-top: 10px; background: #fff url("/content/dam/eaton/images/down_arrow.png") no-repeat; background-size: 10px; background-position: right 10px center; padding-left: 24px; }
