--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-image-only.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-image-only-data.js">
+<sly data-sly-use.data="${'../data/view-image-only-data.js' @testdata=properties.testdata}">
     <div class="eaton-ttil-image-list" data-sly-list="${ data.items }">
         <div class="eaton-ttil-image-list__item">
           <!--/* When Image has Headline & No Url */-->
