--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/cookie-acceptance/css/cookie-acceptance.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/cookie-acceptance/css/cookie-acceptance.css
@@ -1,8 +1,11 @@
-.cookie-acceptance { background-color: #333F48; color: #FFF; top: 0; left: 0; width: 100%; padding: 30px 0 20px; z-index: 99999; display: none; }
+.cookie-acceptancebox { background-color: #333F48; color: #FFF; top: 0; left: 0; width: 100%; padding: 30px 0 20px; z-index: 99999; display: none; }
 
-.cookie-acceptance__agreement { color: #FFF; }
+.cookie-acceptancebox__agreement { color: #FFF; }
 
-.cookie-acceptance__agreement a, .cookie-acceptance__agreement a:hover { color: #fff; text-decoration: underline; }
+.cookie-acceptancebox__agreement a, .cookie-acceptancebox__agreement a:hover { color: #fff; text-decoration: underline; }
 
-@media screen and (max-width: 767px) { .cookie-acceptance { padding: 10px 0 15px; }
-  .cookie-acceptance__cta { width: 100%; margin-top: 5px; } }
+@media screen and (max-width: 767px) { .cookie-acceptancebox { padding: 15px 0 15px; }
+  .cookie-acceptancebox__cta { width: 100%; margin-top: 15px; } }
+
+@media screen and (min-width: 768px) and (max-width: 991px) { .cookie-acceptancebox { padding: 15px 0 15px; }
+  .cookie-acceptancebox__cta { width: 100%; margin-top: 15px; } }
