Rename SASS Variables - Social Networks Colors

--- a/eaton.frontend/src/components/social-links/css/social-links.scss
+++ b/eaton.frontend/src/components/social-links/css/social-links.scss
@@ -22,15 +22,15 @@
   }
 
   // Icon Color - Social Networks
-  .icon-facebook { color: $color__facebook; }
+  // .icon-facebook { color: $color__social-facebook; }
 
-  .icon-twitter { color: $color__twitter; }
+  // .icon-twitter { color: $color__social-twitter; }
 
-  .icon-googleplus { color: $color__googleplus; }
+  // .icon-googleplus { color: $color__social-googleplus; }
 
-  .icon-linked-in { color: $color__linked-in; }
+  // .icon-linked-in { color: $color__social-linked-in; }
 
-  .icon-pinterest { color: $color__pinterest; }
+  // .icon-pinterest { color: $color__social-pinterest; }
 
   // Page Link
   &__page-link { font-size: 18px; }
