--- a/eaton.frontend/src/global/css/_config/variables/_variables-colors.scss
+++ b/eaton.frontend/src/global/css/_config/variables/_variables-colors.scss
@@ -28,8 +28,8 @@ $color__red:                #9D2235;
 
 // Social Links
 //--------------
-$color__facebook:           #2C578F;
-$color__twitter:            #0FA9D0;
-$color__googleplus:         #D44A3A;
-$color__linked-in:          #3699C6;
-$color__pinterest:          #D02127;
+$color__social-facebook:           #2C578F;
+$color__social-twitter:            #0FA9D0;
+$color__social-googleplus:         #D44A3A;
+$color__social-linked-in:          #3699C6;
+$color__social-pinterest:          #D02127;
